# auto-search-CLI

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
auto_reach/: __init__.py  agent.py  channels.py  cli.py  doctor.py  env.py  executables.py  install.py  setup.py
auto_reach/providers/: __init__.py  base.py  bilibili.py  github.py  web.py  xiaohongshu.py
docs/daily/: 2026-07-14-auto-reach-bilibili-summary.md  2026-07-17-web-retrieval-refactor.md
reach-skill/: SKILL.md
reach-skill/agents/: openai.yaml
reach-skill/references/: github.md  search.md  web.md
reach-skill/scripts/: doctor.py  install_deps.py  reach_github.py  reach_web.py  setup_env.py
skill/reach-skill/: SKILL.md
skill/reach-skill/references/: bilibili.md  github.md  search.md  web.md  xiaohongshu.md
tests/: test_agent.py  test_bilibili_provider.py  test_channels.py  test_cli.py  test_doctor.py  test_env.py  test_github_provider.py  test_install.py  test_setup.py  test_web_provider.py  test_xiaohongshu_provider.py
